<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_link">https://temp-mail.org/contact/</string>
    <string name="ad_mob_banner_id">ca-app-pub-1004199402074308/3060761199</string>
    <string name="ad_mob_interstitial_id">ca-app-pub-1004199402074308/6723129448</string>
    <string name="ad_mob_rewarded_id">ca-app-pub-1004199402074308/4238111490</string>
    <string name="add_mob_app_key">ca-app-pub-1004199402074308~7746211076</string>
    <string name="add_time_item_sixty_minutes">60 minutes</string>
    <string name="add_time_item_ten_minutes">10 minutes</string>
    <string name="already_subscribed">You already have a subscription. Do you want to restore it?</string>
    <string name="analytics_api_request_failed">api_request_failed</string>
    <string name="analytics_are_you_sure_no">are_you_sure_no</string>
    <string name="analytics_are_you_sure_yes">are_you_sure_yes</string>
    <string name="analytics_email_change_free">email_change_free</string>
    <string name="analytics_email_change_premium">email_change_premium</string>
    <string name="analytics_email_copy_free">email_copy_free</string>
    <string name="analytics_email_copy_premium">email_copy_premium</string>
    <string name="analytics_email_created_premium">email_created_premium</string>
    <string name="analytics_email_deleted_premium">email_deleted_premium</string>
    <string name="analytics_email_edit_free">email_edit_free</string>
    <string name="analytics_email_edit_premium">email_edit_premium</string>
    <string name="analytics_email_read_premium">email_read_premium</string>
    <string name="analytics_email_received_free">email_received_free</string>
    <string name="analytics_email_received_premium">email_received_premium</string>
    <string name="analytics_email_switched_premium">email_switched_premium</string>
    <string name="analytics_error_message">error_message</string>
    <string name="analytics_event_category_error">api_errors</string>
    <string name="analytics_event_error_code">error_code</string>
    <string name="analytics_event_error_code_str">error_code_str</string>
    <string name="analytics_event_error_is_free">is_free</string>
    <string name="analytics_event_error_method">method</string>
    <string name="analytics_event_error_screen">screen</string>
    <string name="analytics_event_error_sum">method_screen_code_message</string>
    <string name="analytics_event_type_error">error</string>
    <string name="analytics_event_url">url</string>
    <string name="analytics_inbox_refresh_free">inbox_refresh_free</string>
    <string name="analytics_inbox_refresh_premium">inbox_refresh_premium</string>
    <string name="analytics_menu">menu</string>
    <string name="analytics_menu_about_us">menu_about_us</string>
    <string name="analytics_menu_add_email">menu_add_email</string>
    <string name="analytics_menu_feedback">menu_feedback</string>
    <string name="analytics_menu_notifications_off">menu_notifications_off</string>
    <string name="analytics_menu_notifications_on">menu_notifications_on</string>
    <string name="analytics_menu_rate_us">menu_rate_us</string>
    <string name="analytics_menu_restore">menu_restore</string>
    <string name="analytics_menu_upgrade_premium">menu_upgrade_premium</string>
    <string name="analytics_navbar_crown">navbar_crown</string>
    <string name="analytics_premium_payment_failed">premium_payment_failed</string>
    <string name="analytics_premium_price_12m_activated">premium_price_12m_activated</string>
    <string name="analytics_premium_price_12m_click">premium_price_12m_click</string>
    <string name="analytics_premium_price_1m_activated">premium_price_1m_activated</string>
    <string name="analytics_premium_price_1m_click">premium_price_1m_click</string>
    <string name="analytics_premium_price_1w_activated">premium_price_1w_activated</string>
    <string name="analytics_premium_price_1w_click">premium_price_1w_click</string>
    <string name="analytics_premium_price_3m_activated">premium_price_3m_activated</string>
    <string name="analytics_premium_price_3m_click">premium_price_3m_click</string>
    <string name="analytics_premium_price_6m_activated">premium_price_6m_activated</string>
    <string name="analytics_premium_price_6m_click">premium_price_6m_click</string>
    <string name="analytics_premium_price_trial_click">premium_price_trial_click</string>
    <string name="analytics_promo_trial_click">promo_trial_click</string>
    <string name="analytics_qr_code">qr_code</string>
    <string name="analytics_screen_name_billing">billing_activity</string>
    <string name="analytics_screen_name_mailbox">mailbox</string>
    <string name="analytics_screen_name_main_activity">main_activity</string>
    <string name="analytics_screen_name_splash">splash_activity</string>
    <string name="analytics_screen_name_switch">switch_mailbox</string>
    <string name="analytics_stars_bad">stars_good</string>
    <string name="analytics_stars_good">stars_bad</string>
    <string name="analytics_trial_activated">trial_activated</string>
    <string name="analytics_works_bad">works_bad</string>
    <string name="analytics_works_good">works_good</string>
    <string name="app_name">TempMail</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="camera_permission_denied_tip">We will need CAMERA permission for further work. Please give permission in app settings.</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="com.crashlytics.android.build_id">f14cc7fe78344f1b86fea97b8c83e5e5</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="edit_address_button_save">Save</string>
    <string name="edit_address_choose_domain">Choose domain</string>
    <string name="edit_address_name_placeholder">Your name</string>
    <string name="edit_address_subtitle">Your Email will be saved</string>
    <string name="edit_address_title">Create new address</string>
    <string name="menu_restore_purchases">Restore purchases</string>
    <string name="message_button_cancel">Cancel</string>
    <string name="onboarding_button_buy_premium">Try &amp; Subscribe</string>
    <string name="onboarding_buy_premium_tip">Start with __0__ days free trial \10then __1__ per month</string>
    <string name="onboarding_proceed_with_basic">Proceed with basic version</string>
    <string name="onboarding_skip">Skip</string>
    <string name="premium_billed">After __0__ - days free trial an auto-renewable subscription will be activated for __1__/month. You can cancel anytime.</string>
    <string name="premium_purchase_try_for_free">Try premium for free</string>
    <string name="premium_terms_and_conditions">Terms &amp; Conditions</string>
    <string name="premium_terms_and_conditions_text_android">By signing up for a free trial or subscription, you agree to our **Terms of Service** and ++Privacy Policy++.</string>
    <string name="premium_why">Why go Premium?</string>
    <string name="premium_why_line_1">Custom email names</string>
    <string name="premium_why_line_5">Extended email storage</string>
    <string name="premium_why_line_6">Premium support</string>
    <string name="premium_why_line_7">Ad-free</string>
    <string name="rewarded_dialog_message">The free version contains ads</string>
    <string name="rewarded_dialog_title">Watch a short video</string>
    <string name="rewarded_dialog_watch_video">Watch video</string>
</resources>