<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/fragment_ad_premium_0" android:background="@color/white_black_color" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintMain" android:paddingBottom="@dimen/premium_screen_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/leftGuideLine" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="@dimen/premium_screen_horizontal_margin"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/rightGuideLine" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="@dimen/premium_screen_horizontal_margin"/>
        <ImageView android:id="@+id/ivClose" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0" style="@style/ivCloseStyle"/>
        <ImageView android:id="@+id/ivLogo" android:layout_marginTop="52dp" app:layout_constraintEnd_toStartOf="@+id/rightGuideLine" app:layout_constraintStart_toStartOf="@+id/leftGuideLine" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/ic_logo_premium" style="@style/ivPremiumLogoStyle"/>
        <TextView android:textSize="@dimen/tv_title_premium_text_size" android:id="@+id/tvTitle" app:fontFamily="sans-serif" app:layout_constraintEnd_toStartOf="@+id/rightGuideLine" app:layout_constraintStart_toStartOf="@+id/leftGuideLine" app:layout_constraintTop_toBottomOf="@+id/ivLogo" style="@style/tvTitlePremiumStyle"/>
        <TextView android:id="@+id/tvTrialTip" android:text="@string/premium_billed" android:layout_marginStart="@dimen/premium_screen_tv_tip_margin" android:layout_marginEnd="@dimen/premium_screen_tv_tip_margin" app:layout_constrainedWidth="true" app:layout_constraintEnd_toEndOf="@+id/rightGuideLine" app:layout_constraintStart_toStartOf="@+id/leftGuideLine" app:layout_constraintTop_toBottomOf="@+id/tvReasonSeven" style="@style/trialTipStyle"/>
        <Button android:id="@+id/btnSecond" android:layout_marginTop="@dimen/premiumAdBtnSecondMarginTop" android:text="@string/premium_purchase_try_for_free" app:layout_constraintEnd_toStartOf="@+id/rightGuideLine" app:layout_constraintStart_toEndOf="@+id/leftGuideLine" app:layout_constraintTop_toBottomOf="@+id/tvTrialTip" style="@style/btnActionPremiumStyle.Green"/>
        <TextView android:id="@+id/tvWhyPremium" android:layout_marginTop="@dimen/tv_why_ad_margin_top" android:text="@string/premium_why" app:fontFamily="sans-serif-medium" app:layout_constraintEnd_toStartOf="@+id/rightGuideLine" app:layout_constraintStart_toStartOf="@+id/leftGuideLine" app:layout_constraintTop_toBottomOf="@+id/tvTitle" style="@style/tvWhyPremiumStyle"/>
        <ImageView android:id="@+id/ivCheckOne" app:layout_constraintTop_toBottomOf="@+id/tvWhyPremium" style="@style/ivCheckPremiumStyle"/>
        <TextView android:id="@+id/tvReasonOne" android:layout_marginTop="@dimen/reasonOneMarginTop" android:text="@string/premium_why_line_1" app:layout_constraintTop_toBottomOf="@+id/tvWhyPremium" style="@style/tvReasonPremiumStyle"/>
        <ImageView android:id="@+id/ivCheckTwo" app:layout_constraintTop_toBottomOf="@+id/tvReasonOne" style="@style/ivCheckPremiumStyle"/>
        <TextView android:id="@+id/tvReasonTwo" android:tag="binding_1" app:layout_constraintTop_toBottomOf="@+id/tvReasonOne" style="@style/tvReasonPremiumStyle"/>
        <ImageView android:id="@+id/ivCheckThree" app:layout_constraintTop_toBottomOf="@+id/tvReasonTwo" style="@style/ivCheckPremiumStyle"/>
        <TextView android:id="@+id/tvReasonThree" android:tag="binding_2" app:layout_constraintTop_toBottomOf="@+id/tvReasonTwo" style="@style/tvReasonPremiumStyle"/>
        <ImageView android:id="@+id/ivCheckFour" app:layout_constraintTop_toBottomOf="@+id/tvReasonThree" style="@style/ivCheckPremiumStyle"/>
        <TextView android:id="@+id/tvReasonFour" android:tag="binding_3" app:layout_constraintTop_toBottomOf="@+id/tvReasonThree" style="@style/tvReasonPremiumStyle"/>
        <ImageView android:id="@+id/ivCheckFive" app:layout_constraintTop_toBottomOf="@+id/tvReasonFour" style="@style/ivCheckPremiumStyle"/>
        <TextView android:id="@+id/tvReasonFive" android:text="@string/premium_why_line_5" app:layout_constraintTop_toBottomOf="@+id/tvReasonFour" style="@style/tvReasonPremiumStyle"/>
        <ImageView android:id="@+id/ivCheckSix" app:layout_constraintTop_toBottomOf="@+id/tvReasonFive" style="@style/ivCheckPremiumStyle"/>
        <TextView android:id="@+id/tvReasonSix" android:text="@string/premium_why_line_6" app:layout_constraintTop_toBottomOf="@+id/tvReasonFive" style="@style/tvReasonPremiumStyle"/>
        <ImageView android:id="@+id/ivCheckSeven" app:layout_constraintTop_toBottomOf="@+id/tvReasonSix" style="@style/ivCheckPremiumStyle"/>
        <TextView android:id="@+id/tvReasonSeven" android:text="@string/premium_why_line_7" app:layout_constraintTop_toBottomOf="@+id/tvReasonSix" style="@style/tvReasonPremiumStyle"/>
        <TextView android:textColorLink="@color/colorAccent" android:id="@+id/tvTos" android:text="@string/premium_terms_and_conditions_text_android" app:layout_constrainedWidth="true" app:layout_constraintEnd_toStartOf="@+id/rightGuideLine" app:layout_constraintStart_toEndOf="@+id/leftGuideLine" app:layout_constraintTop_toBottomOf="@+id/btnSecond" style="@style/tvTosStyle"/>
        <View android:id="@+id/bottomLine" app:layout_constraintEnd_toStartOf="@+id/rightGuideLine" app:layout_constraintStart_toStartOf="@+id/leftGuideLine" app:layout_constraintTop_toBottomOf="@+id/tvTos" style="@style/premiumBottomLineStyle"/>
        <TextView android:id="@+id/tvRestorePurchase" android:text="@string/menu_restore_purchases" app:layout_constrainedWidth="true" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/bottomLine" style="@style/tvRestorePurchaseStyle"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/rightGuidelineWhyPremium" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="@dimen/premium_screen_why_premium_margin"/>
        <View android:orientation="vertical" android:id="@+id/leftGuideLineWhyPremium" android:layout_width="1dp" android:layout_height="0dp" android:layout_marginStart="@dimen/premium_screen_why_premium_margin" app:layout_constrainedWidth="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
