<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/dialog_rewarded_video_0" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintContent" android:background="@drawable/my_rect_rounded_white" android:layout_width="0dp" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/frameAd" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0">
        <TextView android:textSize="28sp" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/tvTitle" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:text="@string/rewarded_dialog_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:id="@+id/tvMessage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="8dp" android:layout_marginRight="8dp" android:text="@string/rewarded_dialog_message" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>
        <Button android:id="@+id/btnCancel" android:background="@drawable/btn_cancel_selector" android:layout_marginBottom="24dp" android:text="@string/message_button_cancel" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/btnWatchVideo" app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tvMessage" app:layout_constraintVertical_bias="0" style="@style/rewarded_dialog_btn_style"/>
        <Button android:textColor="@android:color/white" android:id="@+id/btnWatchVideo" android:background="@drawable/btn_save_background" android:text="@string/rewarded_dialog_watch_video" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toEndOf="@+id/btnCancel" app:layout_constraintTop_toBottomOf="@+id/tvMessage" style="@style/rewarded_dialog_btn_style"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/frameAd" android:background="@drawable/rect_white_rounded_borders" android:paddingBottom="8dp" android:visibility="gone" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0">
        <TextView android:id="@+id/tvAdTitle" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/tvAdTitleStyle"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
