<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/activity_second_on_boarding_0" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <androidx.viewpager.widget.ViewPager android:id="@+id/pager" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginBottom="24dp" app:layout_constrainedHeight="true" app:layout_constraintBottom_toBottomOf="@+id/guideline" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0"/>
        <TextView android:id="@+id/tvSkip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/onboarding_skip" android:layout_marginEnd="12dp" app:layout_constrainedWidth="true" app:layout_constraintBottom_toBottomOf="@+id/ivSkip" app:layout_constraintEnd_toStartOf="@+id/ivSkip" app:layout_constraintTop_toTopOf="@+id/ivSkip"/>
        <ImageView android:id="@+id/ivSkip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="12dp" android:src="@drawable/ic_skip" app:layout_constrainedHeight="true" app:layout_constrainedWidth="true" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
        <ImageView android:id="@+id/ivDotOne" android:layout_marginEnd="24dp" app:layout_constraintRight_toLeftOf="@+id/ivDotTwo" app:layout_constraintTop_toBottomOf="@+id/pager" style="@style/ivDotStyle"/>
        <ImageView android:id="@+id/ivDotTwo" android:layout_marginEnd="12dp" app:layout_constraintEnd_toEndOf="@+id/guidelineCenter" app:layout_constraintTop_toBottomOf="@+id/pager" style="@style/ivDotStyle"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/guidelineCenter" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.5"/>
        <ImageView android:id="@+id/ivDotThree" android:layout_marginStart="12dp" app:layout_constraintLeft_toRightOf="@+id/guidelineCenter" app:layout_constraintTop_toBottomOf="@+id/pager" style="@style/ivDotStyle"/>
        <ImageView android:id="@+id/ivDotFour" android:layout_marginStart="24dp" app:layout_constraintLeft_toRightOf="@+id/ivDotThree" app:layout_constraintTop_toBottomOf="@+id/pager" style="@style/ivDotStyle"/>
        <TextView android:textSize="16sp" android:gravity="top|center_vertical|center_horizontal|center" android:id="@+id/tvCancel" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/onboarding_dots_margin_top" android:text="@string/onboarding_proceed_with_basic" android:fontFamily="sans-serif-medium" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/pager"/>
        <TextView android:textSize="18sp" android:textColor="@color/thirdTextColor" android:gravity="center" android:id="@+id/tvPremiumTip" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:text="@string/onboarding_buy_premium_tip" android:fontFamily="sans-serif-black" app:layout_constrainedHeight="true" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/ivDotTwo"/>
        <Button android:id="@+id/btnNext" android:text="@string/onboarding_button_buy_premium" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tvPremiumTip" style="@style/btnNextStyle"/>
        <TextView android:textColorHighlight="@color/green_border" android:id="@+id/tvTos" android:visibility="visible" android:layout_marginTop="@dimen/onboarding_cancel_margin_bottom" android:text="@string/premium_terms_and_conditions" android:fontFamily="sans-serif-medium" app:layout_constrainedWidth="true" app:layout_constraintEnd_toEndOf="@+id/btnNext" app:layout_constraintStart_toStartOf="@+id/btnNext" app:layout_constraintTop_toBottomOf="@+id/btnNext" style="@style/tvTosStyle"/>
        <TextView android:textColor="@color/onboarding_restore_text_color" android:id="@+id/tvRestorePurchase" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/menu_restore_purchases" android:fontFamily="sans-serif-medium" app:layout_constrainedWidth="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tvTos" app:layout_constraintVertical_bias="0"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@+id/guideline" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <androidx.constraintlayout.widget.Group android:id="@+id/groupDots" android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="ivDotTwo,ivDotFour,ivDotOne,ivDotThree"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
