<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/constraintLayout" android:tag="layout/fragment_change_email_0" android:background="@color/main_background_gray_color" android:paddingTop="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_horizontal_margin" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/guidelineLeftVertical" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="@dimen/create_email_margin"/>
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/guidelineRightVertical" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="@dimen/create_email_margin"/>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textStyle="bold" android:gravity="center" android:id="@+id/tvTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/edit_address_title" app:layout_constraintEnd_toStartOf="@+id/guidelineRightVertical" app:layout_constraintStart_toStartOf="@+id/guidelineLeftVertical" app:layout_constraintTop_toTopOf="0"/>
    <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:gravity="center" android:id="@+id/tvTip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/change_email_message_top_margin" android:text="@string/edit_address_subtitle" app:layout_constraintEnd_toStartOf="@+id/guidelineRightVertical" app:layout_constraintStart_toStartOf="@+id/guidelineLeftVertical" app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>
    <EditText android:id="@+id/edtLogin" android:background="@drawable/rect_blue" android:padding="@dimen/change_email_text_padding" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/change_email_block_top_margin" android:hint="@string/edit_address_name_placeholder" android:inputType="text" android:imeOptions="actionDone" app:layout_constraintEnd_toStartOf="@+id/guidelineRightVertical" app:layout_constraintStart_toStartOf="@+id/guidelineLeftVertical" app:layout_constraintTop_toBottomOf="@+id/tvTip"/>
    <TextView android:id="@+id/tvChooseDomains" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/edit_address_choose_domain" app:layout_constraintEnd_toStartOf="@+id/guidelineRightVertical" app:layout_constraintStart_toStartOf="@+id/guidelineLeftVertical" app:layout_constraintTop_toBottomOf="@+id/edtLogin"/>
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/rvDomains" android:visibility="gone" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/create_email_domains_margin_top" android:layout_marginBottom="@dimen/create_email_domains_margin_bottom" app:layout_constrainedHeight="true" app:layout_constraintBottom_toTopOf="@+id/btnSave" app:layout_constraintEnd_toStartOf="@+id/guidelineRightVertical" app:layout_constraintStart_toStartOf="@+id/guidelineLeftVertical" app:layout_constraintTop_toBottomOf="@+id/tvChooseDomains" app:layout_constraintVertical_bias="0.6"/>
    <ExpandableListView android:id="@+id/elvMain" android:visibility="visible" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/create_email_domains_margin_top" android:layout_marginBottom="@dimen/create_email_domains_margin_bottom" app:layout_constrainedHeight="true" app:layout_constraintBottom_toTopOf="@+id/btnSave" app:layout_constraintEnd_toStartOf="@+id/guidelineRightVertical" app:layout_constraintStart_toStartOf="@+id/guidelineLeftVertical" app:layout_constraintTop_toBottomOf="@+id/edtLogin"/>
    <Button android:textColor="@android:color/white" android:id="@+id/btnSave" android:background="@drawable/btn_save_background" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginBottom="12dp" android:text="@string/edit_address_button_save" android:elevation="10dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/guidelineRightVertical" app:layout_constraintStart_toStartOf="@+id/guidelineLeftVertical"/>
    <androidx.constraintlayout.widget.Group android:id="@+id/groupDomainsTablet" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="tvChooseDomains,rvDomains"/>
</androidx.constraintlayout.widget.ConstraintLayout>
